--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -1,3 +1,7 @@
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 div.photo-list__item {
   margin: 24px;
   margin-top: auto;
